# libredirect

./: CMakeLists.txt  LICENSE.txt  README.md  arch.h  redirect.c  redirect.h
arch/: amd64.c  x86.c
cmake_modules/: FindBFD.cmake  FindLIBIBERTY.cmake  FindOPCODES.cmake  FindZLIB.cmake
test/: CMakeLists.txt  test_executable.c
